<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_hello"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_medium"
            android:layout_margin="20dp"
            android:text="@string/txt_hello"
            android:textColor="#80FFFFFF"
            android:textSize="22sp"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/rubik_medium"
            android:text="@string/txt_welcome"
            android:textColor="@color/white"
            android:textSize="23sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_hello" />

        <TextClock
            android:id="@+id/tv_time_today"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/rubik_medium"
            android:gravity="center"
            android:format24Hour="HH:mm:ss"
            android:format12Hour="hh:mm:aa"
            android:text="@string/txt_time_today"
            android:layout_marginTop="30dp"
            android:textColor="@color/white"
            android:textSize="60sp"
            app:layout_constraintTop_toBottomOf="@id/tv_welcome" />

        <TextClock
            android:id="@+id/tv_date_today"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/rubik_medium"
            android:gravity="center"
            android:format12Hour="EE, dd MM yyyy"
            android:format24Hour="EEEE, dd MMMM yyyy"
            android:text="@string/txt_date_today"
            android:textColor="#80FFFFFF"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/tv_time_today" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/view_type_alarm"
            android:layout_width="match_parent"
            android:layout_height="290dp"
            app:layout_constraintTop_toBottomOf="@id/tv_date_today"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/bg_rounded_white">

            <TextView
                android:id="@+id/tv_reminder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_set_reminder"
                android:fontFamily="@font/rubik_medium"
                android:textColor="@color/bluetext"
                android:textSize="18sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_margin="20dp"/>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cv_set_one_time_alarm"
                app:layout_constraintTop_toBottomOf="@id/tv_reminder"
                android:focusable="true"
                android:clickable="true"
                android:layout_margin="20dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:background="@drawable/bg_gradient_purple"
                    >

                    <TextView
                        android:id="@+id/tv_set1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_marginStart="12dp"
                        android:fontFamily="@font/rubik_medium"
                        android:text="@string/txt_set"
                        android:textColor="#80FFFFFF"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_one_time_alarm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/rubik_medium"
                        android:text="@string/txt_one_time_alarm"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        app:layout_constraintTop_toBottomOf="@id/tv_set1"
                        app:layout_constraintStart_toStartOf="parent" />

                    <ImageView
                        android:id="@+id/iv_one_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_one_time"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginEnd="20dp"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cv_set_repeating_alarm"
                app:layout_constraintTop_toBottomOf="@id/cv_set_one_time_alarm">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:background="@drawable/bg_gradient_orange"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="20dp">

                    <TextView
                        android:id="@+id/tv_set2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_marginStart="12dp"
                        android:fontFamily="@font/rubik_medium"
                        android:text="@string/txt_set"
                        android:textColor="#80FFFFFF"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_repeating_alarm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/rubik_medium"
                        android:text="@string/txt_repeating_alarm"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        app:layout_constraintTop_toBottomOf="@id/tv_set2"
                        app:layout_constraintStart_toStartOf="parent" />

                    <ImageView
                        android:id="@+id/iv_repeating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_repeating"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginEnd="20dp"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_your_alarm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="40dp"
            android:fontFamily="@font/rubik_medium"
            android:text="@string/txt_your_alarm"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/view_type_alarm"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_reminder_alarm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_your_alarm" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>